ADD wrapper to edit, new, sign up, and login Pages

--- a/app/assets/stylesheets/docs.css.scss
+++ b/app/assets/stylesheets/docs.css.scss
@@ -7,9 +7,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 // DOCS INDEX
 
-   #docs {
+#docs {
 	.doc {
-		background: #000000;
+		background: brown !important;
 		width: 100%;
 		min-height: 100px;
 		margin: 1rem 1%;
